k8s/base/33-ingestair-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ingestair
  name: ingestair
  namespace: clair-berlin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestair
  strategy: {}
  template:
    metadata:
      labels:
        app: ingestair
    spec:
      containers:
        - args:
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8888
          image: clairberlin/managair:0.6.5
          name: ingestair-server
          resources: {}
          volumeMounts:
            - mountPath: "/var/secrets/ingestair-secret"
              name: ingestair-secret
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: ingestair-secret
          secret:
            secretName: ingestair-secret
