k8s/base/43-managair-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: managair-server
  name: managair-server
  namespace: clair-berlin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: managair-server
  strategy: {}
  template:
    metadata:
      labels:
        app: managair-server
    spec:
      containers:
        - args:
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8888
          image: clairberlin/managair:0.6.5
          name: managair-server
          resources: {}
          volumeMounts:
            - mountPath: "/var/secrets/managair-secret"
              name: managair-secret
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: managair-secret
          secret:
            secretName: managair-secret
