k8s/base/53-clairchen-forwarder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clairchen-forwarder
  name: clairchen-forwarder
  namespace: clair-berlin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clairchen-forwarder
  strategy: {}
  template:
    metadata:
      labels:
        app: clairchen-forwarder
    spec:
      containers:
        - env:
            - name: CLAIR_API_ROOT
              value: "http://ingestair:8888/ingest/v1/"
            - name: CLAIR_MODE
              value: "clairchen-forward"
            - name: CLAIR_TTN_ACCESS_KEY_FILE
              value: "/var/secrets/clairchen-forwarder-secret/clairchen-forwarder-access-key.txt"
            - name: CLAIR_TTN_APP_ID
              value: "clairberlinproto"
          image: clairberlin/clairttn:1
          name: clairchen-forwarder
          resources: {}
          volumeMounts:
            - mountPath: "/var/secrets/clairchen-forwarder-secret"
              name: clairchen-forwarder-secret
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: clairchen-forwarder-secret
          secret:
            secretName: clairchen-forwarder-secret
