k8s/base/12-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: clair-berlin
spec:
  selector:
    app: db
  ports:
    - port: 5432
