k8s/base/42-managair-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: managair-server
  namespace: clair-berlin
spec:
  selector:
    app: managair-server
  ports:
    - port: 8888
