k8s/base/99-clair-berlin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: clair-berlin
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-frontend
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: managair-server
            port:
              number: 8888
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: managair-server
            port:
              number: 8888
      - path: /accounts
        pathType: Prefix
        backend:
          service:
            name: managair-server
            port:
              number: 8888
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: managair-server
            port:
              number: 8888
